--- a/apps/webserver/httpd-fs/header.html
+++ b/apps/webserver/httpd-fs/header.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html><head>
-<meta http-equiv="content-type" content="text/html; charset=ISO-8859-10"><title>6 Channel digital LED light controler</title>
+<meta http-equiv="content-type" content="text/html; charset=ISO-8859-10"><title>6 Channel Irregation Systems Controller</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head><body><div class="page">
-<div class="menu"><div class="topbox"><b>LED light controller</b></div></div>
+<div class="menu"><div class="topbox"><b>Irregation Controller</b></div></div>
 <div><table width="100%" class="mytab"><tr><td class="menu" width=150 valign="top"><br><span class="hlinks">
 <div class="menubox"><b>Menu</b></div><br><br>
 <div class="menubox"><a href="index.shtml">Status</a></div><br>
