--- a/apps/webserver/httpd-fs/header.html
+++ b/apps/webserver/httpd-fs/header.html
@@ -1,17 +1,18 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html><head>
-<meta http-equiv="content-type" content="text/html; charset=ISO-8859-10"><title>6 Channel Irregation Systems Controller</title>
+<meta http-equiv="content-type" content="text/html; charset=ISO-8859-10"><title>6 kanalers bevattningsdator</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head><body><div class="page">
-<div class="menu"><div class="topbox"><b>Irregation Controller</b></div></div>
+<div class="menu"><div class="topbox"><b>Bevattningssystem</b></div></div>
 <div><table width="100%" class="mytab"><tr><td class="menu" width=150 valign="top"><br><span class="hlinks">
-<div class="menubox"><b>Menu</b></div><br><br>
+<div class="menubox"><b>Meny</b></div><br><br>
 <div class="menubox"><a href="index.shtml">Status</a></div><br>
-<div class="menubox">Event Settings</div><br>
-<div class="menubox_1"><a href="tevents.shtml">  Time Events</a></div><br>
-<div class="menubox_1"><a href="pirset.shtml">  PIR Events</a></div><br>
-<div class="menubox_1"><a href="dig.shtml">  Digital Input</a></div><br>
-<div class="menubox"><a href="map.shtml">Event Map</a></div><br>
-<div class="menubox"><a href="timeset.shtml">Time Settings</a></div><br>
-<div class="menubox"><a href="netset.shtml">Network Settings</a></div><br>
+<div class="menubox">Sensorinställningar</div><br>
+<div class="menubox_1"><a href="tevents.shtml">  Aktiveringstider</a></div><br>
+<div class="menubox_1"><a href="moistset.shtml">  Fuktsensorer</a></div><br>
+<div class="menubox_1"><a href="pirset.shtml">  PIR händelser</a></div><br>
+<div class="menubox_1"><a href="dig.shtml">  Tryckknappar</a></div><br>
+<div class="menubox"><a href="map.shtml">Händelsefunktioner</a></div><br>
+<div class="menubox"><a href="timeset.shtml">Tidsinställingar</a></div><br>
+<div class="menubox"><a href="netset.shtml">Nätverksinställningar</a></div><br>
 </span><br></div></td><td class="contentblock" valign="top"><div>
